# algo-practice

./: .gitignore  approximate_pi.py  gradient_descent.py  linear_regression.py  monte_carlo_integration.py  pyproject.toml
