[tool.poetry]
name = "vladi_markov"
version = "0.1.0"
description = ""
authors = ["Lyuben Todorov <lyuben.todorov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.1.1"
autopep8 = "^1.4.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
